NTI-2874 fix weird spacing

--- a/src/editor/assignment-discussions/components/View.scss
+++ b/src/editor/assignment-discussions/components/View.scss
@@ -16,12 +16,12 @@
 		padding: 0;
 		margin: 0;
 		display: flex;
-		justify-content: space-between;
 		flex-wrap: wrap;
 
 		li {
 			flex: 0 0 200px;
 			margin-bottom: 10px;
+			margin-right: 10px;
 		}
 	}
 
